--- a/userManager/userManager/userManager.csproj
+++ b/userManager/userManager/userManager.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="reply.cs" />
     <Compile Include="user.cs" />
     <Compile Include="userService.cs" />
   </ItemGroup>
