微信小程序界面修改
修改

--- a/TreeHole/app.json
+++ b/TreeHole/app.json
@@ -8,8 +8,7 @@
     "pages/List/create/create",
     "pages/Person/setting/setting",
     "pages/Person/message/message",
-    "pages/Person/message/message-details/message-details",
-    "pages/text/text"
+   "pages/Person/message/message-details/message-details"
   ],
   "window": {
     "navigationBarBackgroundColor": "#405f80"
