--- a/TreeHole/project.config.json
+++ b/TreeHole/project.config.json
@@ -14,7 +14,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.4.0",
 	"appid": "wxdde01d01825c2719",
-	"projectname": "111111",
+	"projectname": "1111112",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
