--- a/TreeHole/project.config.json
+++ b/TreeHole/project.config.json
@@ -4,7 +4,7 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": true,
+		"urlCheck": false,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
@@ -14,7 +14,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.4.0",
 	"appid": "wxdde01d01825c2719",
-	"projectname": "1111112",
+	"projectname": "111111",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
